tests/resources/errors/errors1.arco
import std;
import std.TestError;

fn foo() raises TestError {
    raise TestError{};
}

fn main() {
    foo() catch err {
        std.print(err.get_message());
    };
}